Commented out poetry for now Placed project cards outside modal, added related skills to projects, fixed bug where pictures overflow on small devices, added a few skills

--- a/css/index.css
+++ b/css/index.css
@@ -124,9 +124,9 @@ button:hover{
 .exp-img{
     margin: auto;
     display: block;
-    width: 100%;
+    width: auto;
     max-height: 200px;
-    max-width: 300px;
+    max-width: 80%;
 }
 .exp-card{
 }
